- Transactions added; - One part of cache created; - MapStruct mapping applied; - Separated logic between layers; - Http responses set up;